Showing active or inactive for most admin things

--- a/PurchaseReq.MVC/PurchaseReq.MVC/Views/Admin/UserManagement.cshtml
+++ b/PurchaseReq.MVC/PurchaseReq.MVC/Views/Admin/UserManagement.cshtml
@@ -2,14 +2,22 @@
 @using Microsoft.AspNetCore.Identity.EntityFrameworkCore
 @model IEnumerable<EmployeeWithDepartmentAndRoomAndRole>
 
-
 @{
     ViewData["Title"] = "UserManagement";
 }
-
 <h2>User management</h2>
 
-@if (true == false)
+@if (ViewBag.Active == true)
+{
+    <a class="btn btn-sm btn-primary" asp-action="InActiveEmployees">View Inactive</a>
+}
+else
+{
+    <a class="btn btn-sm btn-primary" asp-action="UserManagement">View Active</a>
+}
+
+<hr />
+@if (!Model.Any())
 {
     <tr><td colspan="3" class="text-center">No User Accounts</td></tr>
 }
@@ -24,32 +32,28 @@ else
             <th>Department</th>
             <th>Room</th>
             <th>Role</th>
-
         </tr>
-
         @foreach (EmployeeWithDepartmentAndRoomAndRole emp in Model)
         {
-        <tr>
-            <td>@emp.FirstName</td>
-            <td>@emp.LastName</td>
-            <td>@emp.Email</td>
-            <td>@emp.Active</td>
-            <td>@emp.DepartmentName</td>
-            <td>@emp.RoomName</td>
-            <td>@emp.RoleName</td>
-
-
-            <td>
-            
-                <a class="btn btn-sm btn-primary" asp-action="EditUser" asp-route-id="@emp.Id">Edit</a>
-            
-        </td>
-        </tr>
+            <tr>
+                <td>@emp.FirstName</td>
+                <td>@emp.LastName</td>
+                <td>@emp.Email</td>
+                <td>@emp.Active</td>
+                <td>@emp.DepartmentName</td>
+                <td>@emp.RoomName</td>
+                <td>@emp.RoleName</td>
+                <td>
+                    <a class="btn btn-sm btn-primary" asp-action="EditUser" asp-route-id="@emp.Id">Edit</a>
+                    @if (ViewBag.Active)
+                    {
+                        <a class="btn btn-sm btn-danger" asp-action="ChangePassword" asp-route-employeeId="@emp.Id">Change Password</a>
+                    }
+                </td>
+            </tr>
         }
     </table>
 }
-
 <p>
     <a anchor-style="primary" asp-action="AddUser">Add new user</a>
 </p>
-
