--- a/PurchaseReq.MVC/PurchaseReq.MVC/Views/Admin/EditUser.cshtml
+++ b/PurchaseReq.MVC/PurchaseReq.MVC/Views/Admin/EditUser.cshtml
@@ -1,4 +1,4 @@
-﻿@model PasswordEmployeeViewModel
+﻿@model EmployeeWithDepartmentAndRoomAndRole
 
 
 @{
@@ -20,16 +20,6 @@
                 <span asp-validation-for="Email" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Password"></label>
-                <input asp-for="Password" class="form-control" type="password" />
-                <span asp-validation-for="Password" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="ConfirmPassword">Confirm Password</label>
-                <input asp-for="ConfirmPassword" class="form-control" type="password" />
-                <span asp-validation-for="ConfirmPassword" class="text-danger"></span>
-            </div>
-            <div class="form-group">
                 <label asp-for="FirstName"></label>
                 <input asp-for="FirstName" class="form-control" />
                 <span asp-validation-for="FirstName" class="text-danger"></span>
@@ -46,23 +36,20 @@
             </div>
             <div class="form-group">
                 <label class="control-label">Department</label>
-                @Html.DropDownListFor(x => x.DepartmentId, new List<SelectListItem>(ViewBag.Departments), new { @class = "form-control" })
+                @Html.DropDownListFor(x => x.DepartmentId, new List<SelectListItem>(ViewBag.Departments), "Pick a Department", new { @class = "form-control" })
                 <span asp-validation-for="DepartmentId" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label class="control-label">Room</label>
-
-                @Html.DropDownListFor(x => x.RoomId, new List<SelectListItem>(ViewBag.Rooms), new { @class = "form-control" })
-
+                @Html.DropDownListFor(x => x.RoomId, new List<SelectListItem>(ViewBag.Rooms), "Pick a Room", new { @class = "form-control" })
                 <span asp-validation-for="RoomId" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label class="control-label">Role</label>
-
                 @Html.DropDownListFor(x => x.RoleId, new List<SelectListItem>(ViewBag.Roles), new { @class = "form-control" })
-
                 <span asp-validation-for="RoleId" class="text-danger"></span>
             </div>
+            @Html.HiddenFor(x => x.Id)
 
             <button type="submit" class="btn btn-primary">Submit</button>
         </div>
