--- a/PurchaseReq.MVC/PurchaseReq.MVC/Views/Admin/ChangePassword.cshtml
+++ b/PurchaseReq.MVC/PurchaseReq.MVC/Views/Admin/ChangePassword.cshtml
@@ -10,18 +10,21 @@
 
 <div class="row">
     <form asp-controller="Admin" asp-action="ChangePassword" method="post">
-            <div class="form-group">
-                <label asp-for="Password"></label>
-                <input asp-for="Password" class="form-control" type="password" />
-                <span asp-validation-for="Password" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="ConfirmPassword">Confirm Password</label>
-                <input asp-for="ConfirmPassword" class="form-control" type="password" />
-                <span asp-validation-for="ConfirmPassword" class="text-danger"></span>
-            </div>
-            <button type="submit" class="btn btn-primary">Change</button>
-            @Html.HiddenFor(x => x.Id)
+        <div asp-validation-summary="All" class="text-danger"></div>
+        <div class="form-group">
+            <label asp-for="Password"></label>
+            <input asp-for="Password" class="form-control" type="password" />
+            <span asp-validation-for="Password" class="text-danger"></span>
+        </div>
+        <div class="form-group">
+            <label asp-for="ConfirmPassword">Confirm Password</label>
+            <input asp-for="ConfirmPassword" class="form-control" type="password" />
+            <span asp-validation-for="ConfirmPassword" class="text-danger"></span>
+        </div>
+        <button type="submit" class="btn btn-primary">Change</button>
+        @Html.HiddenFor(x => x.Id)
+        @Html.HiddenFor(x => x.Email)
+        @Html.HiddenFor(x => x.RoleId)
     </form>
 </div>
 
