--- a/PurchaseReq.MVC/PurchaseReq.MVC/Views/Campus/EditCampus.cshtml
+++ b/PurchaseReq.MVC/PurchaseReq.MVC/Views/Campus/EditCampus.cshtml
@@ -53,9 +53,12 @@
     </div>
     <div class="form-group">
         <div class="col-md-offset-2 col-md-10">
-            <input type="submit" class="btn btn-primary" value="Update Campus" asp-controller="Campus" asp-action="EditCampus" />
+            <input type="submit" class="btn btn-primary" value="Update Campus"/>
         </div>
     </div>
+
+    @Html.HiddenFor(x => x.Id)
+    @Html.HiddenFor(x => x.TimeStamp)
 </form>
 <div>
     <a asp-action="Index">Back to List</a>
