can add employee to budgetcode

--- a/PurchaseReq.MVC/PurchaseReq.MVC/Views/Budget/AddUserToBudgetCode.cshtml
+++ b/PurchaseReq.MVC/PurchaseReq.MVC/Views/Budget/AddUserToBudgetCode.cshtml
@@ -1,4 +1,4 @@
-﻿@model EmployeeBudgetCodeViewModel
+﻿@model EmployeeBudgetViewModel
 
 
 @{
@@ -8,13 +8,14 @@
 <h2>Add User ToBudgetCode</h2>
 
 
-<form asp-controller="BudgetCode" asp-action="AddUserToBudgetCode">
-    <input type="hidden" name="@Model.EmployeeId" value="@Model.EmployeeName" />
+<form asp-controller="Budget" asp-action="AddUserToBudgetCode">
+    <input type="hidden" name="@Model.UserId" value="@Model.UserId" />
 
 
-    @Html.DropDownListFor(x => x.EmployeeId, new SelectList(ViewBag.Employees, "Id", "FullName"), new { @class = "form-control" })
+    @Html.DropDownListFor(x => x.UserId, new SelectList(Model.Users, "Id", "FullName"), new { @class = "form-control" })
     <br />
-    <input class="btn btn-primary" value="Add to role" type="submit" />
-    <a asp-action="RoleManagement" class="btn btn-primary">Cancel</a>
+    <input class="btn btn-primary" value="Add to Budget Code" type="submit" />
+    <a asp-action="Index" class="btn btn-primary">Cancel</a>
+    @Html.HiddenFor(x => x.BudgetCodeId)
 </form>
 
