--- a/PurchaseReq.MVC/PurchaseReq.MVC/Views/Budget/ViewUsers.cshtml
+++ b/PurchaseReq.MVC/PurchaseReq.MVC/Views/Budget/ViewUsers.cshtml
@@ -21,6 +21,6 @@
 </table>
 
 
-<a asp-action="AddUserToBudgetCode" asp-route-id="@ViewBag.BudgetId" class="btn btn-primary">Add users to role</a>
+<a asp-action="AddUserToBudgetCode" asp-route-id="@ViewBag.BudgetId" class="btn btn-primary">Add users to budget code</a>
 
-<a asp-action="DeleteUserFromBudgetCode" asp-route-id="@ViewBag.BudgetId" class="btn btn-primary">Remove users from role</a>
+<a asp-action="DeleteUserFromBudgetCode" asp-route-id="@ViewBag.BudgetId" class="btn btn-primary">Remove users from budget code</a>
