--- a/PurchaseReq.MVC/PurchaseReq.MVC/Views/Request/AddItem.cshtml
+++ b/PurchaseReq.MVC/PurchaseReq.MVC/Views/Request/AddItem.cshtml
@@ -1,10 +1,10 @@
 ﻿@model RequestWithVendor
 
 @{
-    ViewData["Title"] = "AddItem";
+    ViewData["Title"] = "Add Item";
 }
 
-<h2>AddItem</h2>
+<h2>Add Item</h2>
 
 
 <div class="row">
@@ -43,7 +43,7 @@
 
             <div class="form-group">
                 
-                <input type="submit" asp-route-orderId="@Model.OrderId" class="btn btn-default" />
+                <input type="submit" asp-route-orderId="@Model.OrderId" class="btn btn-primary" />
             </div>
         </form>
     </div>
