--- a/PurchaseReq.MVC/PurchaseReq.MVC/Views/Supervisor/OrderApproval.cshtml
+++ b/PurchaseReq.MVC/PurchaseReq.MVC/Views/Supervisor/OrderApproval.cshtml
@@ -92,8 +92,8 @@
 
         <form>
         
-            <a asp-controller="Supervisor" asp-action="ApproveOrder" asp-route-id="@Model.Id" class="btn btn-default">Approve</a>
-            <a asp-controller="Supervisor" asp-action="DenyOrder" asp-route-id="@Model.Id" class="btn btn-default">Deny</a>
+            <a asp-controller="Supervisor" asp-action="ApproveOrder" asp-route-id="@Model.Id" class="btn btn-primary">Approve</a>
+            <a asp-controller="Supervisor" asp-action="DenyOrder" asp-route-id="@Model.Id" class="btn btn-danger">Deny</a>
 
         </form>
 
