--- a/PurchaseReq.MVC/PurchaseReq.MVC/Views/Order/ViewOrder.cshtml
+++ b/PurchaseReq.MVC/PurchaseReq.MVC/Views/Order/ViewOrder.cshtml
@@ -85,7 +85,18 @@
         @if (Model.StatusId == 1)
         {
             <a asp-controller="Request" asp-action="AddItem" asp-route-orderId="@Model.Id" class="btn btn-primary">Add New Item</a>
-            <a asp-controller="Order" asp-action="UpdateStatus" asp-route-id="@Model.Id" class="btn btn-primary">Submit</a>
+
+            if (Model.RequestsWithVendor.Where(x => x.EstimatedTotal > 3000).Any() && Model.RequestsWithVendor.Count() < 3 && Model.StateContract == false)
+            {
+                <h4>You must add three competing items for orders over 3000</h4>
+
+            }
+            else
+            {
+
+                <a asp-controller="Order" asp-action="UpdateStatus" asp-route-id="@Model.Id" class="btn btn-primary">Submit</a>
+            }
+
         }
 
         @if (User.IsInRole("Purchasing") && Model.StatusName == "Approved")
