--- a/PurchaseReq.MVC/PurchaseReq.MVC/Views/Order/ViewOrder.cshtml
+++ b/PurchaseReq.MVC/PurchaseReq.MVC/Views/Order/ViewOrder.cshtml
@@ -64,6 +64,7 @@
                 <th>Estimated Cost</th>
                 <th>Estimated Total</th>
                 <th>Chosen</th>
+
             </tr>
 
             @foreach (RequestWithVendor req in Model.RequestsWithVendor)
@@ -75,7 +76,7 @@
                     <td>@req.EstimatedCost</td>
                     <td>@req.EstimatedTotal</td>
                     <td>@req.Chosen</td>
-
+                    <td><a asp-action="Index" asp-controller="Attachment" asp-route-requestId=@req.Id class="form-control">View Attachments</a><td>
                 </tr>
 
             }
