--- a/PurchaseReq.MVC/PurchaseReq.MVC/Views/Order/ViewOrder.cshtml
+++ b/PurchaseReq.MVC/PurchaseReq.MVC/Views/Order/ViewOrder.cshtml
@@ -63,7 +63,12 @@
                 <th>Description</th>
                 <th>Estimated Cost</th>
                 <th>Estimated Total</th>
-                <th>Chosen</th>
+                @if(Model.RequestsWithVendor.Where(x => x.EstimatedTotal > 3000).Any())
+                {
+                    <th>Chosen</th>
+                    <td>ReasonChosen</td>
+                }
+                
 
             </tr>
 
@@ -75,7 +80,14 @@
                     <td>@req.Description</td>
                     <td>@req.EstimatedCost</td>
                     <td>@req.EstimatedTotal</td>
-                    <td>@req.Chosen</td>
+                    @if(Model.RequestsWithVendor.Where(x => x.EstimatedTotal > 3000).Any())
+                    {
+                        
+                        <td>@req.Chosen</td>
+                        <td>@req.ReasonChosen</td>
+                        
+                    }
+                    
                     <td><a asp-action="Index" asp-controller="Attachment" asp-route-requestId=@req.Id class="form-control">View Attachments</a><td>
                 </tr>
 
