--- a/PurchaseReq.MVC/PurchaseReq.MVC/Views/Supervisor/OrderApproval.cshtml
+++ b/PurchaseReq.MVC/PurchaseReq.MVC/Views/Supervisor/OrderApproval.cshtml
@@ -4,56 +4,57 @@
 
 <div class="row">
     <div class="col-md-4">
-        
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+
+      
+        <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+        <div class="form-group">
+            <label asp-for="EmployeeFullName" class="control-label">Name</label>
+            <input asp-for="EmployeeFullName" class="form-control" readonly />
+            <span asp-validation-for="EmployeeFullName" class="text-danger"></span>
+        </div>
+
+        <div class="form-group">
+
             <div class="form-group">
-                <label asp-for="EmployeeFullName" class="control-label">Name</label>
-                <input asp-for="EmployeeFullName" class="form-control" readonly />
-                <span asp-validation-for="EmployeeFullName" class="text-danger"></span>
+                <label asp-for="SupervisorFullName" class="control-label">Supervisor</label>
+                <input asp-for="SupervisorFullName" class="form-control" readonly />
+                <span asp-validation-for="SupervisorFullName" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="DateMade" class="control-label">Date</label>
+                <input asp-for="DateMade" class="form-control" readonly />
+                <span asp-validation-for="DateMade" class="text-danger"></span>
             </div>
 
             <div class="form-group">
+                <label asp-for="BudgetCodeName" class="control-label">Budget Code</label>
+                <input asp-for="BudgetCodeName" class="form-control" readonly />
 
-                <div class="form-group">
-                    <label asp-for="SupervisorFullName" class="control-label">Supervisor</label>
-                    <input asp-for="SupervisorFullName" class="form-control" readonly />
-                    <span asp-validation-for="SupervisorFullName" class="text-danger"></span>
+            </div>
+
+            <div class="form-group">
+                <label asp-for="CategoryName" class="control-label">Category</label>
+                <input asp-for="CategoryName" class="form-control" readonly />
+            </div>
+
+            <div class="form-group">
+                <div class="checkbox">
+                    <label>
+                        <input asp-for="StateContract" onclick="return false;" /> @Html.DisplayNameFor(model => model.StateContract)
+                    </label>
                 </div>
-                <div class="form-group">
-                    <label asp-for="DateMade" class="control-label">Date</label>
-                    <input asp-for="DateMade" class="form-control" readonly />
-                    <span asp-validation-for="DateMade" class="text-danger"></span>
-                </div>
+            </div>
 
-                <div class="form-group">
-                    <label asp-for="BudgetCodeName" class="control-label">Budget Code</label>
-                    <input asp-for="BudgetCodeName" class="form-control" readonly />
-
-                </div>
-
-                <div class="form-group">
-                    <label asp-for="CategoryName" class="control-label">Category</label>
-                    <input asp-for="CategoryName" class="form-control" readonly />
-                </div>
-
-                <div class="form-group">
-                    <div class="checkbox">
-                        <label>
-                            <input asp-for="StateContract" onclick="return false;" /> @Html.DisplayNameFor(model => model.StateContract)
-                        </label>
-                    </div>
-                </div>
-
-                <div class="form-group"
+            <div class="form-group"
                         <label asp-for="DateMade" class="control-label">Date</label>
                         <input asp-for="DateMade" class="form-control" readonly />
                         <span asp-validation-for="DateMade" class="text-danger"></span>
                 </div>
-         
 
 
-            </div>
-        
+
+        </div>
+
     </div>
     @if (Model.RequestsWithVendor.Any())
     {
@@ -82,17 +83,18 @@
                     <td>@req.EstimatedTotal</td>
                    @if(req.EstimatedTotal > 3000)
                    {
-                        <th>@req.Chosen</th>
-                        <th>@req.ReasonChosen</th>
+                        <td>@req.Chosen</td>
+                        <td>@req.ReasonChosen</td>
                    }
                 </tr>
             }
 
         </table>
+    
 
         <form>
         
-            <a asp-controller="Supervisor" asp-action="ApproveOrder" asp-route-id="@Model.Id" class="btn btn-primary">Approve</a>
+            <a asp-controller="Supervisor" asp-action="ApproveOrder"  asp-route-id="@Model.Id"  class="btn btn-primary">Approve</a>
             <a asp-controller="Supervisor" asp-action="DenyOrder" asp-route-id="@Model.Id" class="btn btn-danger">Deny</a>
 
         </form>
